[gd_scene load_steps=10 format=2]

[ext_resource path="res://actors/PlatformActor.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/CombatActionBus.gd" type="Script" id=2]
[ext_resource path="res://actors/HitBox.gd" type="Script" id=3]
[ext_resource path="res://utility/Geometry2D.gd" type="Script" id=4]
[ext_resource path="res://actors/HurtBox.gd" type="Script" id=5]
[ext_resource path="res://actors/Health.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 80 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48, 64 )

[node name="PlatformCombatActor" instance=ExtResource( 1 )]

[node name="Gravity" parent="." index="1"]
platform_actor_path = NodePath("../../PlatformCombatActor")

[node name="Jump" parent="." index="2"]
platform_actor_path = NodePath("../../PlatformCombatActor")

[node name="Walk" parent="." index="4"]
platform_actor_path = NodePath("../../PlatformCombatActor")

[node name="Dash" parent="." index="5"]
platform_actor_path = NodePath("../../PlatformCombatActor")

[node name="CombatActionBus" type="Node" parent="." index="6"]
script = ExtResource( 2 )

[node name="HitBoxes" type="Node2D" parent="." index="7"]
script = ExtResource( 3 )
damage = 3

[node name="Duration" type="Timer" parent="HitBoxes" index="0"]
wait_time = 0.2
one_shot = true

[node name="Area2D" type="Area2D" parent="HitBoxes" index="1"]
collision_layer = 0
collision_mask = 2

[node name="Right" type="CollisionShape2D" parent="HitBoxes/Area2D" index="0"]
position = Vector2( 104, -56 )
shape = SubResource( 1 )
disabled = true
script = ExtResource( 4 )
color = Color( 1, 0.27451, 0.27451, 0.666667 )

[node name="Left" type="CollisionShape2D" parent="HitBoxes/Area2D" index="1"]
position = Vector2( -104, -56 )
shape = SubResource( 1 )
disabled = true
script = ExtResource( 4 )
color = Color( 1, 0.27451, 0.27451, 0.666667 )

[node name="Top" type="CollisionShape2D" parent="HitBoxes/Area2D" index="2"]
position = Vector2( 0, -176 )
rotation = 1.57079
shape = SubResource( 2 )
disabled = true
script = ExtResource( 4 )
color = Color( 1, 0.27451, 0.27451, 0.666667 )

[node name="Bottom" type="CollisionShape2D" parent="HitBoxes/Area2D" index="3"]
position = Vector2( 0, 40 )
rotation = 1.57079
shape = SubResource( 2 )
disabled = true
script = ExtResource( 4 )
color = Color( 1, 0.27451, 0.27451, 0.666667 )

[node name="HurtBoxes" type="Node2D" parent="." index="8"]
script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="HurtBoxes" index="0"]
collision_layer = 2
collision_mask = 0

[node name="Body" type="CollisionShape2D" parent="HurtBoxes/Area2D" index="0"]
position = Vector2( 0, -64 )
shape = SubResource( 3 )
script = ExtResource( 4 )
color = Color( 1, 0.364706, 0.364706, 0.623529 )

[node name="Health" type="Node" parent="." index="9"]
script = ExtResource( 6 )
[connection signal="attack_pressed" from="CombatActionBus" to="HitBoxes" method="activate_hit_box"]
[connection signal="attack_released" from="CombatActionBus" to="HitBoxes" method="disable_hit_boxes"]
[connection signal="direction_pressed" from="CombatActionBus" to="HitBoxes" method="set_hit_direction"]
[connection signal="direction_released" from="CombatActionBus" to="HitBoxes" method="set_hit_direction"]
[connection signal="ready" from="HitBoxes" to="HitBoxes" method="disable_hit_boxes"]
[connection signal="timeout" from="HitBoxes/Duration" to="HitBoxes" method="disable_hit_boxes"]
[connection signal="area_shape_entered" from="HitBoxes/Area2D" to="HitBoxes" method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_entered" from="HurtBoxes/Area2D" to="HurtBoxes" method="_on_Area2D_area_shape_entered"]
